--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build:dev": "webpack --mode=development",
     "build:prod": "webpack --mode=production",
     "dev-server": "webpack-dev-server",
-    "test": "jest --config=jest.config.json --runInBand"
+    "test": "jest --config=jest.config.json --runInBand",
+    "start": "node server/server.js",
+    "heroku-postbuild": "yarn run build:prod"
   },
   "author": "Brian Day",
   "license": "ISC",
@@ -24,6 +26,7 @@
     "enzyme": "3.0.0",
     "enzyme-adapter-react-16": "1.0.0",
     "enzyme-to-json": "^3.6.2",
+    "express": "^4.17.2",
     "live-server": "^1.2.1",
     "moment": "^2.29.1",
     "node-sass": "^7.0.1",
