--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "serve": "live-server public/",
     "build:dev": "webpack --mode=development",
     "build:prod": "webpack --mode=production",
     "dev-server": "webpack-dev-server",
@@ -19,15 +18,10 @@
     "@babel/plugin-proposal-class-properties": "^7.16.7",
     "@babel/preset-env": "^7.16.7",
     "@babel/preset-react": "^7.16.7",
-    "@types/jest": "^27.4.0",
     "babel-cli": "^6.24.1",
     "babel-loader": "^8.2.3",
     "css-loader": "^0.28.4",
-    "enzyme": "3.0.0",
-    "enzyme-adapter-react-16": "1.0.0",
-    "enzyme-to-json": "^3.6.2",
     "express": "^4.17.2",
-    "live-server": "^1.2.1",
     "moment": "^2.29.1",
     "node-sass": "^7.0.1",
     "normalize.css": "^8.0.1",
@@ -38,22 +32,26 @@
     "react-modal": "^3.14.4",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
-    "react-test-renderer": "16.0.0",
     "redux": "^4.1.2",
     "sass-loader": "6.0.6",
     "style-loader": "^0.18.2",
     "uuid": "^8.3.2",
     "validator": "^13.7.0",
     "webpack": "^5.66.0",
-    "webpack-dev-server": "^2.5.1",
     "yarn": "^1.22.17"
   },
   "devDependencies": {
+    "@types/jest": "^27.4.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
+    "enzyme": "3.0.0",
+    "enzyme-adapter-react-16": "1.0.0",
+    "enzyme-to-json": "^3.6.2",
     "jest": "^27.4.7",
     "jest-react-hooks-shallow": "^1.5.1",
     "mini-css-extract-plugin": "^2.5.2",
-    "webpack-cli": "^4.9.1"
+    "react-test-renderer": "16.0.0",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^2.5.1"
   }
 }
