--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build:dev": "webpack --mode=development",
     "build:prod": "webpack --mode=production",
-    "dev-server": "webpack-dev-server",
+    "dev-server": "webpack serve --mode=development",
     "test": "jest --config=jest.config.json --runInBand",
     "start": "node server/server.js",
     "heroku-postbuild": "yarn run build:prod"
@@ -41,9 +41,9 @@
     "yarn": "^1.22.17"
   },
   "devDependencies": {
-    "@types/jest": "^27.4.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
+    "@types/jest": "^27.4.0",
     "enzyme": "3.0.0",
     "enzyme-adapter-react-16": "1.0.0",
     "enzyme-to-json": "^3.6.2",
@@ -52,6 +52,6 @@
     "mini-css-extract-plugin": "^2.5.2",
     "react-test-renderer": "16.0.0",
     "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^2.5.1"
+    "webpack-dev-server": "^4.7.3"
   }
 }
