--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-loader": "^8.2.3",
     "css-loader": "^0.28.4",
     "express": "^4.17.2",
+    "firebase": "^9.6.5",
     "moment": "^2.29.1",
     "node-sass": "^7.0.1",
     "normalize.css": "^8.0.1",
@@ -34,6 +35,8 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "redux": "^4.1.2",
+    "redux-mock-store": "^1.5.4",
+    "redux-thunk": "^2.4.1",
     "sass-loader": "6.0.6",
     "style-loader": "^0.18.2",
     "uuid": "^8.3.2",
