--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build:dev": "webpack --mode=development",
     "build:prod": "webpack --mode=production",
     "dev-server": "webpack serve --mode=development",
-    "test": "jest --config=jest.config.json --runInBand",
+    "test": "cross-env NODE_ENV=test jest --config=jest.config.json --runInBand",
     "start": "node server/server.js",
     "heroku-postbuild": "yarn run build:prod"
   },
@@ -20,6 +20,7 @@
     "@babel/preset-react": "^7.16.7",
     "babel-cli": "^6.24.1",
     "babel-loader": "^8.2.3",
+    "cross-env": "^7.0.3",
     "css-loader": "^0.28.4",
     "express": "^4.17.2",
     "firebase": "^9.6.5",
@@ -48,6 +49,7 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@types/jest": "^27.4.0",
+    "dotenv": "^16.0.0",
     "enzyme": "3.0.0",
     "enzyme-adapter-react-16": "1.0.0",
     "enzyme-to-json": "^3.6.2",
